# OpenCoder

./: README.md  chatgpt.py  final_completion.py  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: ARCHITECTURE.md  RELATED_WORK.md
opencoder/: __init__.py  cli.py  pipeline.py
opencoder/data/: __init__.py  loaders.py
opencoder/embeddings/: __init__.py  encoder.py
opencoder/evaluation/: __init__.py  metrics.py
opencoder/llm/: client.py
opencoder/phase1_repo_knowledge/: __init__.py  describe.py  extract.py  profile.py
opencoder/phase2_query/: __init__.py  decompose.py  retrieval_intent.py  step_uncertainty.py
opencoder/phase3_retrieval/: __init__.py  _base.py  api_retriever.py  context_retriever.py  fuse.py  score_filter.py  similar_code_retriever.py
opencoder/phase4_generation/: __init__.py  generate.py
opencoder/phase5_verify/: __init__.py  repair.py  static_checks.py  test_validate.py
opencoder/uncertainty/: __init__.py  aggregate.py  self_consistency.py  semantic_variance.py  token_entropy.py
scripts/: ablation_rq1.py  ablation_rq2.py
tests/: test_smoke.py
