[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencoder"
version = "0.1.0"
description = "Uncertainty-Aware Retrieval-Augmented Code Generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "tqdm>=4.65",
  "pyyaml>=6.0",
  "requests>=2.31",
  "tiktoken>=0.5",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "transformers>=4.40", "sentence-transformers>=2.2"]
eval  = ["datasets>=2.14"]
dev   = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
opencoder = "opencoder.cli:main"

[tool.setuptools.packages.find]
include = ["opencoder*"]
